{
    "name": "CharacterInput",
    "maps": [
        {
            "name": "Player",
            "id": "b1ecff15-7904-4839-b654-b8171068177d",
            "actions": [
                {
                    "name": "MoveArm",
                    "type": "Value",
                    "id": "a089e059-c348-41c2-b193-7e4abce0067a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripLeftArm",
                    "type": "Button",
                    "id": "fed2b97e-6164-4dcd-86f9-71e5cad6fac5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripRightArm",
                    "type": "Button",
                    "id": "2a6487a8-6056-4b3c-a06d-3fcf77b7f81f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57150908-7aa1-470f-8776-3b755fdf702b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99a6c4cb-b9f0-40f0-88b1-8da52c4eef73",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripLeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c927160f-66aa-4904-9fda-fdd92369f15c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripRightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}